Closed Bug 1374938 Opened 8 years ago Closed 8 years ago

mediaDevices.ondevicechange and cam contraints are broken on Mac OSX

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 --- unaffected
firefox56 --- fixed

People

(Reporter: mchiang, Assigned: mchiang)

References

Details

(Keywords: regression)

Attachments

(1 file)

The code update introduced in bug 1341285 broke mediaDevices.ondevicechange on Mac OSX. It is because we are now using webrtc.org's avfoundation wrapper under the folder video_capture/objc instead of our own implementation under video_capture/mac.
Rank: 25
Priority: -- → P2
It seems difficult to have a test case for device change since it is hard to simulate it. It would be nice to have a test case to avoid this kind of regression.
Rank: 25 → 15
Keywords: regression
Priority: P2 → P1
See Also: → 1375321
Assignee: nobody → mchiang
Summary: mediaDevices.ondevicechange is broken on Mac OSX → mediaDevices.ondevicechange and cam contraints are broken on Mac OSX
(In reply to Blake Wu [:bwu][:blakewu] from comment #1) > It seems difficult to have a test case for device change since it is hard to > simulate it. It would be nice to have a test case to avoid this kind of > regression. While device changes are hard to test camera constraints might be a little bit easier. I guess the problem with the constraints is that we use the fake camera everywhere/mostly(?).
Attachment #8880257 - Flags: review?(jib) → review+
Pushed by drno@ohlmeier.org: https://hg.mozilla.org/integration/autoland/rev/c846596b4cb8 use our own avfoundation wrapper. r=jib
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Blocks: 1382433
Depends on: 1379392
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: