Bug 1374938 - use our own avfoundation wrapper. r=jib

MozReview-Commit-ID: KObTvtvRk10