media/webrtc/trunk/webrtc/modules/video_capture/mac/avfoundation/video_capture_avfoundation.mm
@@ -36,7 +36,6 @@ namespace videocapturemodule
 {
 
 VideoCaptureMacAVFoundation::VideoCaptureMacAVFoundation(const int32_t id) :
-    VideoCaptureImpl(id),
     _captureDevice(NULL),
     _captureInfo(NULL),
     _isCapturing(false),
